--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>HerokuDjangoTemp</title>
+        <title>Ecomm</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Ecomm</h1>
     </body>
 </html>
