--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,21 @@
 <html lang="en" dir="ltr">
     {% include "head.html" %}
     {% include "navbar.html" %}
+
     <body>
-        <!-- {% include "navbar.html" %} -->
+        <div class="mt-5 pt-4">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        </div>
+
         {% block content %}{% endblock content %}
 
         {% include "footer.html" %}
