updated the ui on homepage, singup is throwing error

--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -3,9 +3,7 @@
 {% block content %}
 
     <!--Carousel Wrapper-->
-    {% include "homepage-snippets/carousel.html" %}
-
-    <!--Main layout-->
+    <!-- {% include "homepage-snippets/carousel.html" %} <!--Main layout-->
     {% include "homepage-snippets/main.html" %}
 
 {% endblock content %}
