--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
         </div>
 
         {% block content %}{% endblock content %}
+        {% block extra_body %}{% endblock %}
 
         {% include "footer.html" %}
         {% include "scripts.html" %}
